# neurender-server

./: .gitignore  .gitmodules  Dockerfile  build-container.py  docker-compose.yml  example-pipeline.nrp  init-env.sh  pyproject.toml  startup.sh
gaussian-splatting-build/: requirements.txt
gaussian-splatting-build/wheels/: simple_knn-0.0.0-cp310-cp310-linux_x86_64.whl
neurender/: __init__.py  __main__.py  config.py  paths.py  storage.py
neurender/pipeline/: __init__.py
neurender/utils/: __init__.py  files.py  pydantic.py  subprocess.py
tools/gaussian-splatting-build/: requirements.txt
tools/gaussian-splatting-build/wheels/: diff_gaussian_rasterization-0.0.0-cp310-cp310-linux_x86_64.whl  simple_knn-0.0.0-cp310-cp310-linux_x86_64.whl
